# mgmtui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml  config.example.yaml  justfile
crates/mgmt-cli/: Cargo.toml
crates/mgmt-cli/src/: config.rs  crud.rs  daemon.rs  datetime.rs  focus.rs  main.rs  meta.rs  statusbar.rs
crates/mgmt-config/: Cargo.toml
crates/mgmt-config/src/: lib.rs
crates/mgmt-core/: Cargo.toml
crates/mgmt-core/src/: lib.rs
crates/mgmt-dav/: Cargo.toml
crates/mgmt-dav/src/: client.rs  lib.rs
crates/mgmt-domain/: Cargo.toml
crates/mgmt-domain/src/: calendar.rs  event.rs  expand.rs  filter.rs  lib.rs  palette.rs  project.rs  recurrence.rs  reminder.rs  task.rs  workflow.rs
crates/mgmt-ical/: Cargo.toml
crates/mgmt-ical/src/: lib.rs  parser.rs  rrule.rs  value.rs  vevent.rs  vtodo.rs
crates/mgmt-markdown/: Cargo.toml
crates/mgmt-markdown/src/: lib.rs
crates/mgmt-service/: Cargo.toml
crates/mgmt-service/src/: context.rs  lib.rs  reminders.rs  status.rs  time.rs
crates/mgmt-store/: Cargo.toml
crates/mgmt-store/src/: lib.rs  paths.rs  projects.rs  trash.rs  vault.rs  vdir.rs
crates/mgmt-sync/: Cargo.toml
crates/mgmt-sync/src/: engine.rs  hooks.rs  lib.rs  reconcile.rs  rustical.rs
crates/mgmt-tui/: Cargo.toml
crates/mgmt-tui/src/: app.rs  keymap.rs  lib.rs  theme.rs
editors/gnome/mgmt-status@wng.local/: extension.js  metadata.json  stylesheet.css
editors/mgmt.nvim/: README.md
editors/mgmt.nvim/lua/mgmt/: init.lua  meta.lua  source.lua
editors/mgmt.nvim/plugin/: mgmt.lua
tests/blackbox/: README.md  conftest.py  requirements.txt  test_cli.py  test_tui.py
