[package]
name = "mgmt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "mgmt command-line entry point and standalone TUI runner"

[[bin]]
name = "mgmt"
path = "src/main.rs"

[dependencies]
mgmt-core.workspace = true
mgmt-domain.workspace = true
mgmt-config.workspace = true
mgmt-store.workspace = true
mgmt-service.workspace = true
mgmt-tui.workspace = true
mgmt-ical.workspace = true
mgmt-sync.workspace = true
clap.workspace = true
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
chrono.workspace = true
notify-rust.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
