[package]
name = "mgmt-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Human-editable YAML configuration for mgmt (statuses, projects, reminders, theme, accounts)"

[dependencies]
mgmt-core.workspace = true
mgmt-domain.workspace = true
serde.workspace = true
serde_yaml.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true
