[package]
name = "mgmt-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared primitives, errors, and traits for mgmt"

[dependencies]
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
