[package]
name = "mgmt-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Pure domain models for mgmt: events, tasks, calendars, recurrence"

[dependencies]
mgmt-core.workspace = true
serde.workspace = true
chrono.workspace = true
