[package]
name = "mgmt-markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Markdown-first task parsing (YAML frontmatter + body) for mgmt"

[dependencies]
mgmt-core.workspace = true
mgmt-domain.workspace = true
serde.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
