[package]
name = "mgmt-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Sync reconcile engine + rustical management for mgmt"

[dependencies]
mgmt-core.workspace = true
mgmt-domain.workspace = true
mgmt-ical.workspace = true
mgmt-store.workspace = true
mgmt-dav.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true
