[package]
name = "mgmt-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Embeddable ratatui views for mgmt (no terminal ownership)"

[dependencies]
mgmt-core.workspace = true
mgmt-domain.workspace = true
mgmt-config.workspace = true
mgmt-service.workspace = true
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
notify-rust.workspace = true

[dev-dependencies]
mgmt-store.workspace = true
tempfile.workspace = true
